fix header overlap

--- a/aliemu/styles/collections/aliemu/layout.styl
+++ b/aliemu/styles/collections/aliemu/layout.styl
@@ -20,7 +20,7 @@ img
     min-height: 100%
 
 #main-content
-    margin-top: $header-height
+    margin-top: $header-height + $block-margin
     flex: 1
     display: flex
     height: 100%
